--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
+
+
 {
+  "homepage": "https://shreyapandekar.github.io/TicTacToe_using_React",
   "name": "tic-tac",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
